# marston

./: Cargo.toml  cliff.toml  dprint.json  justfile
cli/: Cargo.toml
cli/src/: clap.rs  error.rs  logger.rs  main.rs  panic.rs
cli/src/commands/: build.rs
marston/: Cargo.toml
marston/src/: config.rs  context.rs  fs.rs  info.rs  lexer.rs  lib.rs  reports.rs  span.rs
marston/src/ast/: ident_table.rs  mod.rs  parser.rs
marston/src/codegen/: generator.rs  mod.rs
marston/src/html/: ir.rs  lang.rs  mod.rs  tags.rs
marston/src/validator/: conditions.rs  mod.rs  url.rs
marston/src/validator/rules/: block.rs  blocking.rs  document.rs  global_attributes.rs  head.rs  link.rs  mod.rs  scripts.rs
playground/: marston.toml
playground/src/: index.mr  main.css
