[workspace]
resolver = "3"
members = ["cli", "marston"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.39"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.27"
thiserror = "2.0.12"
backtrace = "0.3.75"
colored = "3.0.0"
sysinfo = "0.35.2"
terminal_size = "0.4.2"
anstyle = "1.0.11"
marston-core = { path = "marston" }
serde = "1.0.219"
toml = "0.8.23"
fs-err = "3.1.0"
camino = "1.1.10"
rayon = "1.10.0"
ariadne = "0.5.1"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# restriction lints
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
self_named_module_files = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
unused_result_ok = "warn"
pathbuf_init_then_push = "warn"

# pedantic lints
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
fn_params_excessive_bools = "allow"
missing_errors_doc = "allow"

# disabled lints
unnecessary_to_owned = "allow"
expect_used = "allow"

# complexity lints
complexity = { level = "warn", priority = -1 }
too_many_arguments = "allow"
non_std_lazy_statics = "allow"

# nursery lints
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
significant_drop_in_scrutinee = "warn"
iter_on_single_items = "warn"
unused_peekable = "warn"
too_long_first_doc_paragraph = "warn"
suspicious_operation_groupings = "warn"
redundant_clone = "warn"

# cargo-specific lints
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
