[package]
name = "marston"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
terminal_size = { workspace = true }
thiserror = { workspace = true }
backtrace = { workspace = true }
colored = { workspace = true }
sysinfo = { workspace = true }
anstyle = { workspace = true }
marston-core = { workspace = true }
camino = { workspace = true }