[package]
name = "marston"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
backtrace = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
glob = "0.3.2"
log = { workspace = true }
marston-core = { workspace = true }
rayon = { workspace = true }
sysinfo = { workspace = true }
terminal_size = { workspace = true }
fs-err = { workspace = true }