[package]
name = "marston-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
fs-err = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
ariadne = { workspace = true }
logos = "0.15.0"

[lints]
workspace = true
