[package]
name = "marston-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
fs-err = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
ariadne = { workspace = true }
logos = "0.15.0"
lasso = { workspace = true, features = ["multi-threaded"] }
rustc-hash = { workspace = true }
bumpalo = { workspace = true }
once_cell = "1.21.3"
log = "0.4.27"
itertools = "0.14.0"

[lints]
workspace = true
