[package]
name = "marston-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
fs-err = { workspace = true }
itertools = "0.14.0"
lasso = { workspace = true, features = ["multi-threaded"] }
log = "0.4.27"
logos = "0.15.0"
once_cell = "1.21.3"
regex = "1.11.1"
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
unic-langid = "0.9.6"
v_htmlescape = "0.15.8"
url = "2.5.4"

[lints]
workspace = true
